Enhance Nest backend and Next frontend integration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Backend port configuration
 PORT=3001
+APP_NAME=Cobalt Downloader API
+APP_DESCRIPTION=NestJS backend powering the Cobalt Downloader platform
+APP_DOCS_PATH=/docs
 
 # Frontend configuration
-NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXT_PUBLIC_API_URL=http://localhost:3001/api
