--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@nestjs/config": "^3.2.0",
+    "@nestjs/swagger": "^7.3.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
